<resources>
    <string name="app_name">HomeworkSix</string>
    <string name="username">Username</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First Name</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="add_user">Add User</string>
    <string name="remove_user">Remove User</string>
    <string name="update_user">Update User</string>
    <string name="user_added_successfully">User added successfully</string>
    <string name="user_already_exists">User already exists</string>
    <string name="user_deleted_successfully">User deleted successfully</string>
    <string name="enter_credintals_correctly">Enter Credintals correctly!</string>
    <string name="user_does_not_exist">User does not exist!</string>
    <string name="changes_applied_successfully">Changes applied successfully!</string>
    <string name="you_have_to_make_changes">You have to make changes!</string>
</resources>